# psi-engine

./: .gitignore  CMakeLists.txt  README.md
doc/: FORMATS.md
generic_shooter_game/: CMakeLists.txt
generic_shooter_game/src/: main.cpp
generic_shooter_game/src/data/: parse.cpp  parse.hpp
generic_shooter_game/src/env/: environment.cpp  environment.hpp
generic_shooter_game/src/gl/: gl.cpp  gl.hpp
generic_shooter_game/src/log/: log.cpp  log.hpp
generic_shooter_game/src/manager/: environment.cpp  environment.hpp  service.cpp  service.hpp  system.cpp  system.hpp
generic_shooter_game/src/resource/: glsl_source.cpp  glsl_source.hpp
generic_shooter_game/src/service/: resource.cpp  resource.hpp  window_gl.cpp  window_gl.hpp
generic_shooter_game/src/system/: renderer_gl.cpp  renderer_gl.hpp
generic_shooter_game/src/task/: manager.cpp  manager.hpp
generic_shooter_game/src/util/: assert.hpp
mesh_converter/: CMakeLists.txt
mesh_converter/src/: main.cpp
psi/: CMakeLists.txt
psi/src/impl/: impl.hpp
psi/src/impl/rendering/: camera.cpp  camera.hpp  resource.cpp  resource.hpp
psi/src/impl/rendering/gl/: gl.cpp  helper.cpp  helper.hpp
psi/src/impl/resource/: data.hpp  file.cpp  file.hpp  glsl.cpp  glsl.hpp  glsl_source.cpp
psi/src/impl/scene/: default_components.hpp
psi/src/impl/service/: resource.cpp  resource.hpp  window_gl.cpp  window_gl.hpp
psi/src/impl/system/: renderer_gl.cpp  renderer_gl.hpp
psi/src/log/: log.cpp  log.hpp
psi/src/marker/: thread_safety.hpp
psi/src/scene/: access.hpp  components.hpp  scene.hpp
psi/src/scene/impl/: default_components.hpp
psi/src/service/: manager.cpp  manager.hpp  resource.hpp  window.hpp
psi/src/service/impl/: glsl_source.cpp  glsl_source.hpp  resource.cpp  resource.hpp  window_gl.cpp  window_gl.hpp
psi/src/system/: manager.cpp  manager.hpp  system.hpp
psi/src/system/impl/: renderer_gl.cpp  renderer_gl.hpp
psi/src/thread/: manager.cpp  manager.hpp  task.hpp
psi/src/thread/impl/: manager.cpp  manager.hpp
psi/src/util/: assert.hpp  enum.hpp  file.cpp  file.hpp  gl.hpp  glsl_source.hpp  stream.cpp  stream.hpp
resources/glsl/: bounding.frag  bounding.vert  box.frag  box.vert  deferred_geometry.frag  deferred_geometry.vert  quad.frag  quad.vert  skybox.frag  skybox.vert  standard.frag  standard.vert
sol/: CMakeLists.txt
sol/src/: service_resource.hpp  service_window.hpp  system.hpp
sol/src/file/: load.cpp  load.hpp
sol/src/io/: streamer.cpp  streamer.hpp
sol/src/scene/: scene.hpp  system.hpp
sol/src/service/: resource.hpp  window.hpp
sol/src/stream/: streamer.hpp
sol/src/task/: submitter.hpp
